# NBDiskReader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Notes.txt  README.md  Session.vim
Documents/: CRT.txt  D64.txt  D71.txt  D81.txt  G64.TXT  GEOS.TXT  T64.TXT  TAP.TXT  _ReadMe.txt
Images/: _ReadMe.txt  test.d64
NBDiskReader/: CMakeLists.txt
NBDiskReader/docs/: Doxyfile
NBDiskReader/src/: main.cpp
NBLibrary/: CMakeLists.txt
NBLibrary/docs/: Doxyfile
NBLibrary/inc/Modules/: Test_File.h
NBLibrary/inc/Modules/Core/: cFile.h
NBLibrary/inc/Modules/DiskImages/: cDiskCore.h
NBLibrary/src/: main.cpp
NBLibrary/src/Modules/: Test_File.cpp
NBLibrary/src/Modules/Core/: cFile.cpp
NBLibrary/src/Modules/DiskImages/: cDiskCore.cpp
TestNBDiskReader/: CMakeLists.txt
TestNBDiskReader/docs/: Doxyfile
TestNBDiskReader/src/: unitTests.cpp
TestNBLibrary/: CMakeLists.txt
TestNBLibrary/docs/: Doxyfile
TestNBLibrary/src/: unitTests.cpp
